<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_oauth_text"
            android:textColor="@color/text"
            android:textSize="@dimen/text_medium" />

        <Button
            android:id="@+id/LoginAuthButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/login_oauth_button"
            android:textSize="@dimen/text_medium" />

        <EditText
            android:id="@+id/LoginPinCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pin_code_hint"
            android:textSize="@dimen/text_medium" />

        <Button
            android:id="@+id/LoginLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_login"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        style="@style/MyToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

</LinearLayout>