<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light2"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        card_view:cardCornerRadius="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/commentEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/register_bookmark_comment_hint" />

                    <TextView
                        android:id="@+id/commentCountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="8dp"
                        android:textColor="@color/text_secondary"
                        android:textSize="@dimen/text_large" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_bookmark_tag_list_header"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_large" />

                    <TextView
                        android:id="@+id/tagListText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_large" />

                    <Button
                        android:id="@+id/tagEditButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_bookmark_tag_edit"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/privateCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_bookmark_private"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_large" />

                    <CheckBox
                        android:id="@+id/postTwitterCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_bookmark_twitter"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_large" />
                </LinearLayout>

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="@dimen/text_medium" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_bookmark_delete"
                    android:textSize="@dimen/text_medium" />
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>